Mobile overflow fix

--- a/BuildFeed/res/css/default.scss
+++ b/BuildFeed/res/css/default.scss
@@ -114,6 +114,7 @@ table
    max-width: 88%;
    margin: 0 auto;
    position: relative;
+   overflow: hidden;
 }
 
 .no-wrapping
